<resources>
    <string name="app_name">Examen ACTOR-PELÍCULA</string>
    <string name="btn_ingresar" translatable="false">INGRESAR</string>
    <string name="txt_nombre" translatable="false">Ingrese su nombre</string>
    <string name="txt_nuevoUsuario" translatable="false">Nombre</string>
    <string name="btn_gestAutor" translatable="false">Gestionar Actor</string>
    <string name="btn_crearAutor" translatable="false">Crear Actor</string>
    <string name="btn_guardar" translatable="false">GUARDAR</string>
    <string name="txt_nombresActor" translatable="false">Nombre</string>
    <string name="txt_apellidoActor" translatable="false">Apellido</string>
    <string name="txt_fechaNacimiento" translatable="false">Fecha de Nacimiento</string>
    <string name="txt_numPeliculas" translatable="false">Número de Películas</string>
    <string name="sw_Retirado" translatable="false">Retirado</string>
    <string name="btn_Eliminar" translatable="false">ELIMINAR</string>
    <string name="btn_Actualizar" translatable="false">ACTUALIZAR</string>
    <string name="btn_gestionarPeliculas" translatable="false">GESTIONAR PELÍCULAS</string>
    <string name="btn_crearPeliculas" translatable="false">CREAR PELÍCULAS</string>
    <string name="txt_nombresActor1" translatable="false">Nombre</string>
    <string name="txt_apellidoActor1" translatable="false">Apellido</string>
    <string name="txt_fechaNacimiento1" translatable="false">Fecha de Nacimiento</string>
    <string name="txt_numPeliculas1" translatable="false">Número de Películas</string>
    <string name="sw_Retirado1" translatable="false">Retirado</string>
    <string name="txt_nombrePelicula" translatable="false">Nombre</string>
    <string name="txt_anioLanzamiento" translatable="false">Año de Lanzamiento</string>
    <string name="txt_rating" translatable="false">Clasificación</string>
    <string name="txt_actoresPrincipales" translatable="false">Actores principales</string>
    <string name="txt_sinopsis" translatable="false">Sinopsis</string>
    <string name="btn_registrar" translatable="false">Registrar</string>
    <string name="txt_nombrePelicula1" translatable="false">Nombre</string>
    <string name="txt_anioLanzamiento1" translatable="false">Año de Lanzamiento</string>
    <string name="txt_rating1" translatable="false">Clasificación</string>
    <string name="txt_actoresPrincipales1" translatable="false">Actores principales</string>
    <string name="txt_sinopsis1" translatable="false">Sinopsis</string>
    <string name="btn_eliminar1" translatable="false">Eliminar</string>
    <string name="btn_actualizar1" translatable="false">Actualizar</string>








</resources>
