<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActor">

    <EditText
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_apellidoActor1" android:hint="@string/txt_apellidoActor1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.333"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.476"/>
    <Switch
            android:text="@string/sw_Retirado1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sw_Retirado1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.111" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.89"/>
    <EditText
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_numPeliculas1" android:hint="@string/txt_numPeliculas1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintVertical_bias="0.632" app:layout_constraintHorizontal_bias="0.492"/>
    <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombresActor1"
            android:hint="@string/txt_nombresActor1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            app:layout_constraintVertical_bias="0.197" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.403"/>
    <EditText
            android:layout_width="330dp"
            android:layout_height="54dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fechaNacimiento1"
            android:hint="@string/txt_fechaNacimiento1"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            app:layout_constraintVertical_bias="0.482" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.403"/>
    <Button
            android:text="@string/btn_Eliminar"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:id="@+id/btn_eliminar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintVertical_bias="0.76" android:hint="@string/btn_Eliminar"/>
    <Button
            android:text="@string/btn_Actualizar"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:id="@+id/btn_Actualizar"
            android:hint="@string/btn_Actualizar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.886" app:layout_constraintVertical_bias="0.76"/>
    <Button
            android:text="@string/btn_gestionarPeliculas"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btn_gestionarPeliculas"
            android:hint="@string/btn_gestionarPeliculas" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.867"/>
    <Button
            android:text="@string/btn_crearPeliculas"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/btn_crearPeliculas"
            android:hint="@string/btn_crearPeliculas" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.966"/>
    <TextView
            android:text="N° Películas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fechaNacimiento1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_numPeliculas1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintVertical_bias="0.6"/>
    <TextView
            android:text="Fecha de Nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellidoActor1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_fechaNacimiento1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/txt_apellidoActor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombresActor1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_apellidoActor1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintVertical_bias="0.65"/>
    <TextView
            android:text="Nombre"
            android:layout_width="75dp"
            android:layout_height="21dp"
            android:id="@+id/textView4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_nombresActor1"
            app:layout_constraintEnd_toStartOf="@+id/sw_Retirado1" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.165"
            app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>